* Wed Mar 24 11:17:00 2010 +0900 Miscellaneous 5%, Models-Behaviors-and-Datasource 40% done by hiromi2424
| 
* Wed Mar 24 09:58:15 2010 +0900 リンク修正、en -> ja by hiromi2424
| 
* Wed Mar 24 09:37:20 2010 +0900 Components done. by hiromi2424
| 
* Tue Mar 23 16:59:31 2010 +0900 View-Helpers done. by hiromi2424
| 
* Fri Mar 19 02:43:47 2010 +0900 View-Helpers 20%ぐらい by hiromi2424
| 
* Fri Mar 19 01:28:31 2010 +0900 Router-and-Dispatcher done. by hiromi2424
| 
* Fri Mar 19 01:05:44 2010 +0900 Console done. by hiromi2424
| 
* Thu Mar 18 21:13:48 2010 +0900 ろぎんぐー by hiromi2424
| 
* Thu Mar 18 16:22:35 2010 +0900 オリジナルファイル群、翻訳（済・予定）ファイル群追加 by hiromi2424
| 
* Thu Mar 18 16:11:44 2010 +0900 ファイル移動 by hiromi2424
| 
* Thu Mar 18 16:05:49 2010 +0900 Library-classes 100% done by hiromi2424
| 
* Thu Mar 18 12:31:27 2010 +0900 ちょっと更新 by hiromi2424
| 
* Thu Mar 18 11:58:44 2010 +0900 added Library-classes by hiromi2424
| 
* Tue Feb 23 20:35:30 2010 +0900 細かな変更・ちょい訳 by hiromi2424
| 
* Tue Feb 23 19:00:09 2010 +0900 「移行ガイド」細かな変更 by hiromi2424
| 
* Wed Feb 17 19:53:47 2010 +0900 「新機能」 10% done. by hiromi2424
| 
* Wed Feb 17 17:51:20 2010 +0900 「新機能 > プラグインアセット」5% done. by hiromi2424
| 
* Wed Feb 17 17:50:20 2010 +0900 「新機能 > FormHelper」 done. by hiromi2424
| 
* Wed Feb 17 03:46:55 2010 +0900 READMEの文面校正 by hiromi2424
| 
* Wed Feb 17 03:39:37 2010 +0900 「訳注」の追加 by hiromi2424
| 
* Wed Feb 17 03:27:10 2010 +0900 変更履歴の追加 by hiromi2424
| 
* Wed Feb 17 02:35:49 2010 +0900 「新機能 > FormHelper」20%更新。 by hiromi2424
| 
* Wed Feb 17 00:39:42 2010 +0900 オリジナルの更新に伴い該当箇所を翻訳。 by hiromi2424
| 
* Wed Feb 17 00:34:51 2010 +0900 「移行ガイド」ページのオリジナルとの同期 by hiromi2424
| 
* Tue Feb 16 20:39:52 2010 +0900 FormHelper ちょこっと更新 by hiromi2424
| 
* Tue Feb 16 20:38:58 2010 +0900 ヴァーチャル→バーチャル by hiromi2424
| 
* Tue Feb 16 18:21:23 2010 +0900 READMEの更新　と　超微修正 by hiromi2424
| 
* Tue Feb 16 17:58:09 2010 +0900 VirtualFieldsのページ完了 by hiromi2424
| 
* Mon Feb 15 22:01:01 2010 +0900 コミットてすと by hiromi2424
| 