@@ -1,4 +1,10 @@
-* Wed Mar 24 11:17:00 2010 +0900 Miscellaneous 5%, Models-Behaviors-and-Datasource 40% done by hiromi2424
+* Thu Mar 25 10:48:43 2010 +0900 Models-Behaviors-and-Datasource 70% done. by hiromi2424
+| 
+* Thu Mar 25 10:48:05 2010 +0900 fit to original by hiromi2424
+| 
+* Thu Mar 25 10:47:06 2010 +0900 Merge original from latest by hiromi2424
+| 
+* Wed Mar 24 11:18:10 2010 +0900 Miscellaneous 5%, Models-Behaviors-and-Datasource 40% done by hiromi2424
 | 
 * Wed Mar 24 09:58:15 2010 +0900 リンク修正、en -> ja by hiromi2424
 | 
